(Raster)

* ignore mouse events shilst sliding off to a new desktop area with edge resist
on, and we're abotu to warp the pointer anyway.. so just ignore the extra 
mouse events.

* dont slide iconified windows around when moving virtual desktops

* account for border of window when dropping pager mini ewin on other pagers
and stuff so you cant accidentally drop it off screen, also ignore othr windows
apart from pagers and iconboxes when doing the drop.

* flim

-------------------------------------------------------------------------------

Sat Sep 11 13:49:43 PDT 1999
(Raster)

add ABOUT section to Brushed Metal theme so the "about this theme" entry in 
the middle-desktop button menu works and displays something nice.

i hope all theme desginers use this to plug themselves and any comments or
credits they want to give for their theme.

-------------------------------------------------------------------------------

Sat Sep 11 14:17:44 PDT 1999
(Raster)

fix minor sample loading and caching bug.. :)

-------------------------------------------------------------------------------

Sat Sep 11 15:00:52 PDT 1999
(Raster)

ad onyl allow you to stick menus if you release on the titlebar of the menu...
much better :)

-------------------------------------------------------------------------------

Sat Sep 11 15:31:35 PDT 1999
(Raster)

hm ok - fix that pager bug i just put in.. NOw it does what it was meant to

-------------------------------------------------------------------------------

Sat Sep 11 15:56:18 PDT 1999
(Raster)

ok - fixed that iconify and pager bug for good :)

-------------------------------------------------------------------------------

Sun Sep 12 10:19:20 PDT 1999
(Raster)

play desktop area swtichign sounds whenever u swithc - even witht he pager.. :)

-------------------------------------------------------------------------------

Sun Sep 12 10:39:46 PDT 1999
(Raster)

make sure we have name and class set on dialogs so rememebr.. can work on them